# SiPMSiM

./: CMakeLists.txt  Readme.txt  main.cpp
MacOS/: CMakeLists.txt
SIPM/: SiPM.cc  SiPM.hh
example/: open_result.ipynb
exemple/: SiPM.xml  XYZTime_ev.npy
include/: G4GlobalConfig.hh  G4OpticalMaterialProperties.hh  G4PhysicalConstants.hh  G4SystemOfUnits.hh  G4ThreeVector.hh  GateSiPMMessenger.hh  GateXMLDocument.hh  NumpyFile.hh  PhysicalConstants.h  Randomize.hh  SiPM.hh  ThreeVector.h  TreeFile.hh
include/CLHEP/Random/: MixMaxRng.h  mixmax_skip_N8.icc
src/: G4MaterialPropertiesTable.cc  G4UIaliasList.cc  G4UIbatch.cc  G4UIcommandTree.cc  G4UIcontrolMessenger.cc  G4UnitsTable.cc  GateSiPMMessenger.cc  GateXMLDocument.cc  MixMaxRng.cc  NumpyFile.cc  Random.cc  TreeFile.cc
